# OWModel

./: .gitignore  CMakeLists.txt  Cargo.toml  DataWork.ipynb  Examples.ipynb  FittingModels.ipynb  Iseries.txt  README.md  dQI.csv  datapreparing.ipynb  deltaQ.tsv  deltaQseries.txt  indexes.txt  marketimpact.tsv  readme.md
.github/workflows/: poster2023.yml  presentation2023.yml  python-package.yml  report.yml  rust.yml
AllAboutTheReport/Conclusions (Dec)/: conclusions.tex
AllAboutTheReport/Conclusions (Jan 10)/: conclusions.tex
AllAboutTheReport/Conclusions (Jan 14)/: conclusions.bcf-SAVE-ERROR  conclusions.tex
AllAboutTheReport/Conclusions (Jan 17/: conclusions.tex
AllAboutTheReport/MarketPuzzlePresentation/: MarketImpactPres.tex
AllAboutTheReport/Poster/: beamerthemevegaposter.sty  refs.bib  sample_doc.tex
AllAboutTheReport/Presentation/: conclusions.tex
AllAboutTheReport/Proofs/: ResilencyConnection.tex
AllAboutTheReport/Report/: README.md  abstract.tex  appendix.tex  body.tex  conclusion.tex  document.tex  introduction.tex  refs.bib  vegaarticle.cls
DataParsing/src/: main.rs  orderbook.rs
ImpactPrediction/: CreatingdQL.ipynb  DW2.ipynb  DataWork.ipynb  FitMod.py  FittingModels.ipynb  FittingModels2.ipynb  MIgraphs.ipynb
ImpactPrediction/DataForImpact/: dQI.csv
New data/Bad tries/: OWcoefs.ipynb  dataproperties (bad approach).ipynb
Old data/: DataWork.ipynb
data_parsing/: CMakeLists.txt  Cargo.toml
optexec/: CMakeLists.txt  __init__.py  dataloader.py  execution.py  misc.py  requirements.txt
src/: main.rs  orderbook.rs
(+36 files in other folders)
